@@ -142,7 +142,7 @@ QS_UserTrackingCookieName     _ckUT /errorpages/cookie.html
 </IfDefine>
 
 <IfDefine usertrack_force_passive>
-QS_UserTrackingCookieName     _ckUTP /errorpages/cookie-ir.shtml passive
+QS_UserTrackingCookieName     _ckUTP /errorpages/cookie-ir.shtml jsredirect
 </IfDefine>
 
 Listen         ##QS_PORT_BASE##
