@@ -13,7 +13,7 @@ _EXEC ./ctl.sh restart -D h2 -D usertrack_force -D debug 2>/dev/null 1>/dev/null
 _REQ 127.0.0.1 $QS_PORT_BASE
 __GET /index.html HTTP/1.1
 __Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt h1
+__User-Agent: 570_QS_UserTrackingCookieName.htt h1
 __
 _MATCH headers "Set-Cookie: _ckUT=(.*); Path=/" UCA
 _MATCH headers "Location: http://127.0.0.1:${QS_PORT_BASE}/errorpages/cookie.html\?r=(.*)" Q
@@ -25,7 +25,7 @@ _CLOSE
 _REQ 127.0.0.1 $QS_PORT_BASE
 __GET /errorpages/cookie.html?r=${Q} HTTP/1.1
 __Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt h2
+__User-Agent: 570_QS_UserTrackingCookieName.htt h2
 __Cookie: _ckUT=${UCA}
 __
 _EXPECT . "Location: http://127.0.0.1:${QS_PORT_BASE}/index.html"
@@ -36,7 +36,7 @@ _CLOSE
 _REQ 127.0.0.1 $QS_PORT_BASE
 __GET /static.html HTTP/1.1
 __Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt h3
+__User-Agent: 570_QS_UserTrackingCookieName.htt h3
 __Cookie: _ckUT=${UCA}
 __
 _EXPECT . "<title>Static Page</title>"
@@ -48,7 +48,7 @@ _CLOSE
 _REQ 127.0.0.1 $QS_PORT_BASE
 __GET /static.html HTTP/1.1
 __Host: 127.0.0.1:${QS_PORT_BASE}
-__User-Agent: 070_QS_UserTrackingCookieName.htt h4
+__User-Agent: 570_QS_UserTrackingCookieName.htt h4
 __Cookie: _ckUT=v8UdFg1Q4674fL8XgcAnizR7z4LP5tJI09GS9Sx/BgxRYpNmx9vYAG3yfmFHywxx9ns6Eu66P6vLhFzs5RHjMg==
 __
 _EXPECT . "!<title>Static Page</title>"
@@ -61,11 +61,26 @@ _SLEEP 100
 _EXPECT EXEC "mod_qos.c\([0-9]+\): .* mod_qos\(\): qos_decrypt\(\) decryption operation failed, id="
 _EXEC tail -1 logs/error_log
 
+# ignores post
+_REQ 127.0.0.1 $QS_PORT_BASE
+__POST /static.html HTTP/1.1
+__Host: 127.0.0.1:${QS_PORT_BASE}
+__User-Agent: 570_QS_UserTrackingCookieName.htt p1
+__Content-Type: application/x-www-form-urlencoded
+__Content-Length: AUTO
+__
+_-name=value
+_EXPECT . "<title>Static Page</title>"
+_EXPECT . "!302"
+_EXPECT . "Set-Cookie: _ckUT="
+_WAIT
+_CLOSE
+
 # HTTPS ------------------------
 _REQ 127.0.0.1 SSL:$QS_PORT_BASE2
 __GET /index.html HTTP/1.1
 __Host: 127.0.0.1:${QS_PORT_BASE2}
-__User-Agent: 070_QS_UserTrackingCookieName.htt s1
+__User-Agent: 570_QS_UserTrackingCookieName.htt s1
 __
 _MATCH headers "Set-Cookie: _ckUT=(.*); Path=/" UCB
 _MATCH headers "Location: https://127.0.0.1:${QS_PORT_BASE2}/errorpages/cookie.html\?r=(.*)" Q
@@ -77,7 +92,7 @@ _CLOSE
 _REQ 127.0.0.1 SSL:$QS_PORT_BASE2
 __GET /errorpages/cookie.html?r=${Q} HTTP/1.1
 __Host: 127.0.0.1:${QS_PORT_BASE2}
-__User-Agent: 070_QS_UserTrackingCookieName.htt s2
+__User-Agent: 570_QS_UserTrackingCookieName.htt s2
 __Cookie: _ckUT=${UCB}
 __
 _EXPECT . "Location: https://127.0.0.1:${QS_PORT_BASE2}/index.html"
@@ -88,7 +103,7 @@ _CLOSE
 _REQ 127.0.0.1 SSL:$QS_PORT_BASE2
 __GET /static.html HTTP/1.1
 __Host: 127.0.0.1:${QS_PORT_BASE2}
-__User-Agent: 070_QS_UserTrackingCookieName.htt s3
+__User-Agent: 570_QS_UserTrackingCookieName.htt s3
 __Cookie: _ckUT=${UCB}
 __
 _EXPECT . "<title>Static Page</title>"
